--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   
   
   
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}">
 
   
 </head>
@@ -56,7 +56,7 @@
         </form>
     </main>
   
-    <script  src="js/index.js"></script>
+    <script  src="{{ url_for('static',filename='js/index.js') }}"></script>
 
 </body>
 </html>
