--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>华丽的HTML5/CSS3输入框聚焦发光动画表单DEMO演示</title>
+  <title>Login</title>
   
   
   
@@ -13,7 +13,7 @@
 
 <body>
    <main>
-        <form class="form">
+        <form class="form " action="/" method="post">
             <div class="form__cover"></div>
             <div class="form__loader">
                 <div class="spinner active">
@@ -25,28 +25,28 @@
             <div class="form__content">
                 <h1>Authorization</h1>
                 <div class="styled-input">
-                    <input type="text" class="styled-input__input" name="nickname">
+                    <input type="text" class="styled-input__input" name="username" >
                     <div class="styled-input__placeholder">
                         <span class="styled-input__placeholder-text">Username</span>
                     </div>
                     <div class="styled-input__circle"></div>
                 </div><div class="styled-input">
-                     <input type="password" class="styled-input__input">
+                     <input type="password" class="styled-input__input" name="password">
                     <div class="styled-input__placeholder">
                         <span class="styled-input__placeholder-text">Password</span>
                     </div>
                     <div class="styled-input__circle"></div>
                 </div>
-                <button type="button" class="styled-button">
+                <button type="submit" class="styled-button">
                     <span class="styled-button__real-text-holder">
-                        <span class="styled-button__real-text">Submit</span>
+                        <span class="styled-button__real-text">Submita</span>
                         <span class="styled-button__moving-block face">
                             <span class="styled-button__text-holder">
-                                <span class="styled-button__text">Submit</span>
+                                <span class="styled-button__text">Submitb</span>
                             </span>
                         </span><span class="styled-button__moving-block back">
                             <span class="styled-button__text-holder">
-                                <span class="styled-button__text">Submit</span>
+                                <span class="styled-button__text">Submitc</span>
                             </span>
                         </span>
                     </span>
