--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
 <body>
    <main>
-        <form class="form " action="/" method="post">
+        <form class="form " action="/login" method="post">
             <div class="form__cover"></div>
             <div class="form__loader">
                 <div class="spinner active">
@@ -39,14 +39,14 @@
                 </div>
                 <button type="submit" class="styled-button">
                     <span class="styled-button__real-text-holder">
-                        <span class="styled-button__real-text">Submita</span>
+                        <span class="styled-button__real-text">Submit</span>
                         <span class="styled-button__moving-block face">
                             <span class="styled-button__text-holder">
-                                <span class="styled-button__text">Submitb</span>
+                                <span class="styled-button__text">Submit</span>
                             </span>
                         </span><span class="styled-button__moving-block back">
                             <span class="styled-button__text-holder">
-                                <span class="styled-button__text">Submitc</span>
+                                <span class="styled-button__text">Submit</span>
                             </span>
                         </span>
                     </span>
