--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
               <div class="sidebar-content">
                 <a href="#" id="toggle-sidebar"><i class="fa fa-bars"></i></a>
                 <div class="sidebar-brand">
-                    <a href="#">pro sidebar</a>
+                    <a href="#">DEVOPS</a>
                 </div>
                 <div class="sidebar-header">
                     <div class="user-pic">
@@ -90,11 +90,11 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="header-menu"><span>Simple menu</span></li>
-                        <li><a href="#"><i class="fa fa-tv"></i><span>Menu 1</span></a></li>                   
-                        <li><a href="#"><i class="fa fa-photo"></i><span>Menu 2</span></a></li>
-                        <li><a href="#"><i class="fa fa-bar-chart-o"></i><span>Menu 3</span></a></li>
-                        <li><a href="#"><i class="fa fa-diamond"></i><span>Menu 4</span></a></li>
+                        <li class="header-menu"><span>Virtualization menu</span></li>
+                        <li><a href="#"><i class="fa fa-tv"></i><span>主机</span></a></li>
+                        <li><a href="#"><i class="fa fa-photo"></i><span>监控</span></a></li>
+                        <li><a href="#"><i class="fa fa-bar-chart-o"></i><span>日志</span></a></li>
+                        <li><a href="#"><i class="fa fa-diamond"></i><span>系统管理</span></a></li>
                     </ul>
                    </div><!-- sidebar-menu  -->            
                 </div><!-- sidebar-content  -->
