--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
 
 <body>
    <main>
-        <form class="form " action="/login" method="post">
+        <form class="form " action="/login/" method="post">
             <div class="form__cover"></div>
             <div class="form__loader">
                 <div class="spinner active">
