--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                         <img class="img-responsive img-rounded" src="{{ url_for('static',filename='assets/img/user.jpg') }}" alt="">
                     </div>
                     <div class="user-info">
-                        <span class="user-name">Jhon <strong>Smith</strong></span>
+                        <span class="user-name">JingRui <strong>Xu</strong></span>
                         <span class="user-role">Administrator</span>
                         <div class="user-status">                       
                             <a href="#"><span class="label label-success">Online</span></a>                           
@@ -47,7 +47,7 @@
                     <ul>
                         <li class="header-menu"><span>Dropdown  menu</span></li>
                         <li class="sidebar-dropdown">
-                            <a  href="#" ><i class="fa fa-tv"></i><span>Menu 1</span><span class="label label-danger">New</span></a>
+                            <a  href="#" ><i class="fa fa-tv"></i><span>负载均衡</span><span class="label label-danger">New</span></a>
                             <div class="sidebar-submenu">
                                 <ul>
                                     <li><a href="#">submenu 1 <span class="label label-success">10</span></a> </li>
@@ -58,7 +58,7 @@
                             </div>
                         </li>                  
                         <li class="sidebar-dropdown">
-                            <a href="#"><i class="fa fa-photo"></i><span>Menu 2</span><span class="badge">3</span></a>
+                            <a href="#"><i class="fa fa-photo"></i><span>自动化运维</span><span class="badge">3</span></a>
                             <div class="sidebar-submenu">
                                 <ul>
                                     <li><a href="#">submenu 1 <span class="badge">2</span></a></li>
@@ -69,7 +69,7 @@
                             </div>
                         </li>
                         <li class="sidebar-dropdown">
-                            <a href="#"><i class="fa fa-bar-chart-o"></i><span>Menu 3</span></a>
+                            <a href="#"><i class="fa fa-bar-chart-o"></i><span>日志分析</span></a>
                             <div class="sidebar-submenu">
                                 <ul>
                                     <li><a href="#">submenu 1</a></li>
@@ -80,7 +80,7 @@
                             </div>
                         </li>
                         <li class="sidebar-dropdown">
-                            <a href="#"><i class="fa fa-diamond"></i><span>Menu 4</span></a>
+                            <a href="#"><i class="fa fa-diamond"></i><span>系统监控</span></a>
                             <div class="sidebar-submenu">
                                 <ul>
                                     <li><a href="#">submenu 1</a></li>
@@ -91,9 +91,9 @@
                             </div>
                         </li>
                         <li class="header-menu"><span>Virtualization menu</span></li>
-                        <li><a href="#"><i class="fa fa-tv"></i><span>主机</span></a></li>
-                        <li><a href="#"><i class="fa fa-photo"></i><span>监控</span></a></li>
-                        <li><a href="#"><i class="fa fa-bar-chart-o"></i><span>日志</span></a></li>
+                        <li><a href="#"><i class="fa fa-tv"></i><span>CMDB</span></a></li>
+                        <li><a href="#"><i class="fa fa-photo"></i><span>安全管理</span></a></li>
+                        <li><a href="#"><i class="fa fa-bar-chart-o"></i><span>系统日志</span></a></li>
                         <li><a href="#"><i class="fa fa-diamond"></i><span>系统管理</span></a></li>
                     </ul>
                    </div><!-- sidebar-menu  -->            
@@ -123,6 +123,6 @@
 		
 		<script src="{{ url_for('static',filename='assets/js//jquery.mCustomScrollbar.concat.min.js') }}"></script>
 		<script src="{{ url_for('static',filename='assets/js/custom.js') }}"></script>
-		
+
 </body>
 </html>
