--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>侧边栏</title>
+	<title>{% block title %}{% endblock %}</title>
 	
 	<link href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<link href="http://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -108,16 +108,19 @@
             </nav><!-- sidebar-wrapper  -->
             <main class="page-content">
                 <div class="container-fluid">
+                    {% block main %}{% endblock %}
+
                 	<header class="header">
 						<h1>基于jquery和Bootstrap3的隐藏侧边栏 <span>Responsive sidebar template based on bootstrap framwork</span></h1>
 					</header>
-					<h1 style="text-align:center;">Pro sidebar template</h1>
-					<h3 style="text-align:center;">点击左上角的 <i class="fa fa-bars"></i> 按钮来查看侧边栏效果</h3>
+
+                {% block main %}{% endblock %}
+
                 </div>
             </main><!-- page-content" -->
         </div><!-- page-wrapper -->
-	
-	
+
+
 		<script src="{{ url_for('static',filename='js/jquery-1.11.0.min.js') }}" type="text/javascript"></script>
 		<script src="{{ url_for('static',filename='js/bootstrap.min.js') }}" type="text/javascript"></script>
 		
