添加父子模板

--- a/templates/biaoge.html
+++ b/templates/biaoge.html
@@ -1,12 +1,10 @@
 {% extends 'base.html' %}
 
-{% block head %}
-    <link rel="stylesheet" href="{{ url_for('static',filename='css/login_regist.css') }}">
-{% endblock %}
+{% block title %}{% endblock %}
+
+{% block head %}{% endblock %}
 
 {% block main %}
-
-
 
  <div class="container">
 	<div class="row clearfix">
@@ -14,90 +12,42 @@
 			<table class="table table-hover">
 				<thead>
 					<tr>
-						<th>
-							编号
-						</th>
-						<th>
-							产品
-						</th>
-						<th>
-							交付时间
-						</th>
-						<th>
-							状态
-						</th>
+						<th>编号</th>
+						<th>产品</th>
+						<th>交付时间</th>
+						<th>状态</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
-						<td>
-							1
-						</td>
-						<td>
-							TB - Monthly
-						</td>
-						<td>
-							01/04/2012
-						</td>
-						<td>
-							Default
-						</td>
+						<td>1</td>
+						<td>TB - Monthly</td>
+						<td>01/04/2012</td>
+						<td>Default</td>
 					</tr>
 					<tr class="table-hover">
-						<td>
-							1
-						</td>
-						<td>
-							TB - Monthly
-						</td>
-						<td>
-							01/04/2012
-						</td>
-						<td>
-							Approved
-						</td>
+						<td>1</td>
+						<td>TB - Monthly</td>
+						<td>01/04/2012</td>
+						<td>Approved</td>
 					</tr>
 					<tr class="table-hover">
-						<td>
-							2
-						</td>
-						<td>
-							TB - Monthly
-						</td>
-						<td>
-							02/04/2012
-						</td>
-						<td>
-							Declined
-						</td>
+						<td>2</td>
+						<td>TB - Monthly</td>
+						<td>02/04/2012</td>
+						<td>Declined</td>
 					</tr>
 					<tr class="table-hover">
-						<td>
-							3
-						</td>
-						<td>
-							TB - Monthly
-						</td>
-						<td>
-							03/04/2012
-						</td>
-						<td>
-							Pending
-						</td>
+						<td>3</td>
+						<td>TB - Monthly</td>
+						<td>03/04/2012</td>
+						<td>Pending</td>
 					</tr>
 					<tr class="table-hover">
-						<td>
-							4
-						</td>
-						<td>
-							TB - Monthly
-						</td>
-						<td>
-							04/04/2012
-						</td>
-						<td>
-							Call in to confirm
-						</td>
+						<td>4</td>
+						<td>TB - Monthly</td>
+						<td>04/04/2012</td>
+						<td>Call in to confirm</td>
 					</tr>
 				</tbody>
 			</table>
