--- a/static/css/demo.css
+++ b/static/css/demo.css
@@ -20,9 +20,15 @@ body, html { font-size: 100%; 	padding: 0; margin: 0;}
 	clear: both;
 }
 
+/*
+下面页面底色
+background: #494A5F;
+页面字体
+color: #D5D6E2;
+*/
 body{
-	background: #494A5F;
-	color: #D5D6E2;
+	background: #f3f3f3;
+	color: #1c232f;
 	font-weight: 500;
 	font-size: 1.05em;
 	font-family: "Microsoft YaHei","Segoe UI", "Lucida Grande", Helvetica, Arial,sans-serif;
@@ -46,4 +52,10 @@ body{
 	font-weight: 400;
 	padding: 0.8em 0 0.5em 0;
 	color: #c3c8cd;
+}
+
+
+.data {
+	background: #fff;
+	border-radius:15px;
 }
