--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
               <div class="sidebar-content">
                 <a href="#" id="toggle-sidebar"><i class="fa fa-bars"></i></a>
                 <div class="sidebar-brand">
-                    <a href="#">DEVOPS</a>
+                    <a href="{{ url_for('home') }}">DEVOPS</a>
                 </div>
                 <div class="sidebar-header">
                     <div class="user-pic">
@@ -91,7 +91,7 @@
                             </div>
                         </li>
                         <li class="header-menu"><span>Virtualization menu</span></li>
-                        <li><a href="#"><i class="fa fa-tv"></i><span>CMDB</span></a></li>
+                        <li><a href="{{ url_for('CMDB') }}"><i class="fa fa-tv"></i><span>CMDB</span></a></li>
                         <li><a href="#"><i class="fa fa-photo"></i><span>安全管理</span></a></li>
                         <li><a href="#"><i class="fa fa-bar-chart-o"></i><span>系统日志</span></a></li>
                         <li><a href="#"><i class="fa fa-diamond"></i><span>系统管理</span></a></li>
@@ -108,14 +108,15 @@
             </nav><!-- sidebar-wrapper  -->
             <main class="page-content">
                 <div class="container-fluid">
-                    {% block main %}{% endblock %}
 
+                <div class="data">
                 	<header class="header">
 						<h1>基于jquery和Bootstrap3的隐藏侧边栏 <span>Responsive sidebar template based on bootstrap framwork</span></h1>
 					</header>
 
                 {% block main %}{% endblock %}
 
+                </div>
                 </div>
             </main><!-- page-content" -->
         </div><!-- page-wrapper -->
