--- a/static/css/demo.css
+++ b/static/css/demo.css
@@ -40,10 +40,10 @@ body{
 	text-align: center;
 }
 .header h1 {
-	color: #D5D6E2;
+	color: #1c232f;
 	font-weight: 600;
 	font-size: 2em;
-	line-height: 1;
+	line-height: 3;
 	margin-bottom: 0;
 }
 .header h1 span {
