添加父子模板

--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
                                     <li><a href="{{ url_for('user',id='user_list') }}">用户列表</a></li>
                                     <li><a href="#">权限管理</a></li>
                                     <li><a href="#">操作记录</a></li>
-                                    <li><a href="#">登录日志</a></li>
+                                    <li><a href="{{ url_for('user',id='user_login_log') }}">登录日志</a></li>
                                 </ul>
                             </div>
                         </li>
