添加登录日志

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="sidebar-header">
                     <div class="user-pic">
-                        <img class="img-responsive img-rounded" src="{{ url_for('static',filename='assets/img/user.jpg') }}" alt="">
+                        <img class="img-responsive img-rounded" src="{{ url_for('static',filename='assets/img/dev.png') }}" alt="">
                     </div>
                     <div class="user-info">
                         <span class="user-name">JingRui <strong>Xu</strong></span>
