添加登录日志

--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -5,7 +5,70 @@
 {% block head %}{% endblock %}
 
 {% block main %}
-    <header class="header"><h1>用户列表</h1></header>
+    <header class="header">
+
+
+
+
+<!-- Large modal -->
+<button class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Large modal</button>
+
+<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+       <div>
+      <h1>faslkdjflaskdjf</h1>
+        <p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
+	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
+	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
+	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
+	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
+      </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Send message</button>
+        </div>
+
+    </div>
+  </div>
+</div>
+
+<!-- Small modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-sm">Small modal</button>
+
+<div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+     <div>
+      <h1>faslkdjflaskdjf</h1>
+        <p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
+	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
+	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
+	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
+	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
+      </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Send message</button>
+        </div>
+
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+        <h1>用户列表</h1></header>
  <div class="container">
 	<div class="row clearfix">
 		<div class="col-md-12 column">
