添加登录日志

--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -5,13 +5,14 @@
 {% block head %}{% endblock %}
 
 {% block main %}
-    <header class="header">
+    <header class="header"><h1>用户列表</h1></header>
 
 
+ <div class="container">
 
-
+<div class="user_button" >
 <!-- Large modal -->
-<button class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Large modal</button>
+<button class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">修改用户</button>
 
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -35,7 +36,7 @@
 </div>
 
 <!-- Small modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-sm">Small modal</button>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-sm">注册用户</button>
 
 <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -58,18 +59,9 @@
   </div>
 </div>
 
+</div>
 
 
-
-
-
-
-
-
-
-
-        <h1>用户列表</h1></header>
- <div class="container">
 	<div class="row clearfix">
 		<div class="col-md-12 column">
 			<table class="table table-hover">
