添加注册用户HTML

--- a/static/css/demo.css
+++ b/static/css/demo.css
@@ -60,8 +60,16 @@ body{
 	border-radius:15px;
 }
 
+.user_button_gps {
+    margin:130px auto;
+}
+.user_button_gps .modal-content {
+ 	border-radius:35px;
+}
+
+
 .user_button {
     margin: 0 auto;
 	line-height: 3;
-
+    text-align: center;
 }
