--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -10,15 +10,16 @@
 
  <div class="container">
 
-<div class="user_button" >
+<div>
 <!-- Large modal -->
 <button class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">修改用户</button>
 
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog user_button_gps">
     <div class="modal-content">
-       <div>
-      <h1>faslkdjflaskdjf</h1>
+       <div class="user_button">
+      <h1>修改用户</h1>
+           <hr>
         <p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
 	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
 	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
@@ -39,10 +40,11 @@
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-sm">注册用户</button>
 
 <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog user_button_gps">
     <div class="modal-content">
-     <div>
-      <h1>faslkdjflaskdjf</h1>
+     <div class="user_button">
+      <h1>注册用户</h1>
+         <hr>
         <p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
 	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
 	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
@@ -351,269 +353,6 @@
                         <td>2017-01-16 19:11</td>
                         <td>OnLine</td>
 					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-					<tr class="table-hover">
-						<td>1</td>
-						<td>admin</td>
-						<td>administrator</td>
-                        <td>12345678901</td>
-                        <td>xujingrui@qq.com</td>
-                        <td>2017-01-16 13:45</td>
-                        <td>2017-01-16 19:11</td>
-                        <td>OnLine</td>
-					</tr>
-
 
 
 
