添加注册用户HTML

--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -15,7 +15,7 @@
 <button class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">修改用户</button>
 
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog user_button_gps">
+  <div class="modal-dialog ">
     <div class="modal-content">
        <div class="user_button">
       <h1>修改用户</h1>
@@ -40,16 +40,42 @@
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-sm">注册用户</button>
 
 <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-  <div class="modal-dialog user_button_gps">
+  <div class="modal-dialog ">
     <div class="modal-content">
      <div class="user_button">
       <h1>注册用户</h1>
          <hr>
-        <p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
-	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
-	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
-	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
-	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
+        <p></p>
+
+         <div class="input-group input-group-lg">
+  <span class="input-group-addon" id="sizing-addon1">名</span>
+  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon1">
+</div>
+         <div class="input-group input-group-lg">
+  <span class="input-group-addon" id="sizing-addon1">姓</span>
+  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon1">
+</div>
+
+         <div class="input-group input-group-lg">
+  <span class="input-group-addon" id="sizing-addon1">手机号码</span>
+  <input type="text" class="form-control" placeholder="Phone Number" aria-describedby="sizing-addon1">
+</div>
+
+         <div class="input-group input-group-lg">
+  <span class="input-group-addon" id="sizing-addon1">邮箱地址</span>
+  <input type="text" class="form-control" placeholder="Mail" aria-describedby="sizing-addon1">
+</div>
+
+         <div class="input-group input-group-lg">
+  <span class="input-group-addon" id="sizing-addon1">密码</span>
+  <input type="password" class="form-control" placeholder="password" aria-describedby="sizing-addon1">
+</div>
+
+         <div class="input-group input-group-lg">
+  <span class="input-group-addon" id="sizing-addon1">确认密码</span>
+  <input type="password" class="form-control" placeholder="password" aria-describedby="sizing-addon1">
+</div>
+
       </div>
 
         <div class="modal-footer">
