--- a/static/css/demo.css
+++ b/static/css/demo.css
@@ -60,10 +60,8 @@ body{
 	border-radius:15px;
 }
 
-.user_button_gps {
-    margin:130px auto;
-}
-.user_button_gps .modal-content {
+
+.modal-content {
  	border-radius:35px;
 }
 
@@ -72,4 +70,9 @@ body{
     margin: 0 auto;
 	line-height: 3;
     text-align: center;
+    width:450px
+}
+.input-group {
+    margin: 30px;
+
 }
