添加数据库模型

--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -17,14 +17,37 @@
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog ">
     <div class="modal-content">
-       <div class="user_button">
+     <div class="user_button">
       <h1>修改用户</h1>
-           <hr>
-        <p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
-	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
-	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
-	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
-	<p>askjdlfkajsldkfjalsdkjflasjdlfjasldjflasjdlfjs</p>
+         <hr>
+        <p></p>
+
+
+         <div class="input-group input-group-lg">
+  <span class="input-group-addon" id="sizing-addon1">用户</span>
+  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon1">
+</div>
+
+         <div class="input-group input-group-lg">
+  <span class="input-group-addon" id="sizing-addon1">手机号码</span>
+  <input type="text" class="form-control" placeholder="Phone Number" aria-describedby="sizing-addon1">
+</div>
+
+         <div class="input-group input-group-lg">
+  <span class="input-group-addon" id="sizing-addon1">邮箱地址</span>
+  <input type="text" class="form-control" placeholder="Mail" aria-describedby="sizing-addon1">
+</div>
+
+         <div class="input-group input-group-lg">
+  <span class="input-group-addon" id="sizing-addon1">密码</span>
+  <input type="password" class="form-control" placeholder="password" aria-describedby="sizing-addon1">
+</div>
+
+         <div class="input-group input-group-lg">
+  <span class="input-group-addon" id="sizing-addon1">确认密码</span>
+  <input type="password" class="form-control" placeholder="password" aria-describedby="sizing-addon1">
+</div>
+
       </div>
 
         <div class="modal-footer">
@@ -47,12 +70,9 @@
          <hr>
         <p></p>
 
+
          <div class="input-group input-group-lg">
-  <span class="input-group-addon" id="sizing-addon1">名</span>
-  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon1">
-</div>
-         <div class="input-group input-group-lg">
-  <span class="input-group-addon" id="sizing-addon1">姓</span>
+  <span class="input-group-addon" id="sizing-addon1">用户</span>
   <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon1">
 </div>
 
